Deleted extra search button in yahoo answers

--- a/SearchSavior Chrome Extension/manifest.json
+++ b/SearchSavior Chrome Extension/manifest.json
@@ -2,7 +2,7 @@
   "name": "SearchSavior",
   "version": "1.0.2",
   "description": "A Seamlessly Integrated Search Tool For All Your Academic Needs",
-  "permissions": ["*://*/*", "activeTab", "contextMenus"],
+  "permissions": ["activeTab", "contextMenus"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
