--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "SearchSavior",
   "version": "2.0.0",
   "description": "A Seamlessly Integrated Browser Extension For Conducting Better Academic Searches",
-  "permissions": ["activeTab", "contextMenus"],
+  "permissions": ["activeTab"],
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
