--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "SearchSavior",
-  "version": "2.0.0",
+  "version": "2.0.4",
   "description": "A Seamlessly Integrated Browser Extension For Conducting Better Academic Searches",
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage"],
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
